fix/feat(Modal.module.scss):fixed styles and added styles for new option block 1. fix modal-out overflow 2. fix modal-content: display content, gap between blocks, increased the font size 3. fix animation to not close modal  during animation 4. increased the distance of appearance of the content block 5. added styles for block with result reaction (win, loss) 4. added styles for control buttons closed window (buttons, button:with hover and focus)

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,22 +4,28 @@ $duration: 2s;
 	position: absolute;
 	top: 0;
 	left: 0;
-	//z-index: 10;
+	z-index: 10;
 	width: 100vw;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background-color: rgba(0, 0, 0, 0.4);
+	overflow: hidden;
 
 	.modal-content {
-		background-color: rgb(169, 151, 116);
+		background-color: #b1a697;
 		border-radius: 10px;
 		padding: 20px;
 		border-radius: 10px;
 		width: fit-content;
 		height: fit-content;
 		box-shadow: 10px 10px 50px 10px rgb(72, 67, 57);
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		color: #4e4135;
+		font-size: 1.2rem;
 	}
 }
 
@@ -42,13 +48,18 @@ $duration: 2s;
 @keyframes smooth-shadow-appearance {
 	0% {
 		display: none;
+		pointer-events: none;
 		opacity: 0;
 	}
 	0.1% {
 		opacity: 0;
 		display: flex;
 	}
+	99.9% {
+		pointer-events: none;
+	}
 	100% {
+		pointer-events: auto;
 		opacity: 1;
 	}
 }
@@ -57,12 +68,14 @@ $duration: 2s;
 	0% {
 		display: none;
 		opacity: 0;
+		pointer-events: none;
 	}
 	0.1% {
 		opacity: 0;
 		display: flex;
 	}
 	100% {
+		pointer-events: none;
 		opacity: 1;
 	}
 }
@@ -77,18 +90,60 @@ $duration: 2s;
 
 @keyframes drop-block {
 	from {
-		transform: translate(-120%, -120%) rotate(0.5turn);
+		transform: translate(-200%, -200%) rotate(0.5turn);
 	}
 	to {
-		transform: translateY(0%, 0%);
+		transform: translate(0%, 0%) rotate(0turn);
 	}
 }
 
 @keyframes drop-block-fade {
 	from {
-		transform: translate(-120%, -120%) rotate(0.5turn);
+		transform: translate(200%, -200%) rotate(0.5turn);
 	}
 	to {
-		transform: translateY(0%, 0%);
+		transform: translate(0%, 0%) rotate(0turn);
+	}
+}
+
+.win,
+.loss {
+	width: 40vh;
+	height: 40vh;
+	position: absolute;
+	bottom: 2vh;
+	left: 1vh;
+	background-size: contain;
+}
+
+.win {
+	background-image: url('../../assets/win_w_f.gif');
+}
+
+.loss {
+	background-image: url('../../assets/loss_w_f.gif');
+}
+
+.buttons {
+	display: flex;
+	gap: 10px;
+	align-items: center;
+	justify-content: center;
+}
+.button {
+	background-color: #ffffff;
+	color: #4e4135;
+	box-shadow: inset 0 0 6px #4e4135;
+	border: 1px solid #4e4135;
+	&:hover {
+		box-shadow: inset 0 0 12px #4e4135;
+	}
+	&:focus {
+		background-color: #4e4135;
+		color: #ffffff;
+		//opacity: 0.7;
+		box-shadow: inset 0 0 10px #ffffff;
+		border: 1px solid #ffffff;
+		filter: brightness(120%);
 	}
 }
